# stock-hunter

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARABIC_GUIDE.md  ARCHITECTURE.md  CHANGELOG_AR.md
scripts/: check_documentation.py
src/stock_hunter/: __init__.py  config.py  dashboard.py  db.py  events.py  live.py  logging.py  main.py  notifications.py  opportunity_cards.py  performance.py  performance_store.py  radar.py  signal_history.py
src/stock_hunter/hunters/: __init__.py  engine.py  models.py
src/stock_hunter/intraday/: __init__.py  models.py  rvol.py  service.py
src/stock_hunter/judge/: __init__.py  engine.py  models.py  store.py
src/stock_hunter/providers/: __init__.py  base.py  factory.py  finnhub.py  fmp.py  http.py  mock.py  models.py  sec.py
src/stock_hunter/universe/: __init__.py  models.py  nasdaq.py  scheduler.py  service.py
tests/: test_core.py  test_hunters.py  test_intraday_storage.py  test_judge.py  test_live.py  test_notifications.py  test_opportunity_cards.py  test_opportunity_store.py  test_performance.py  test_performance_store.py  test_radar.py  test_rvol.py  test_scheduler.py  test_signal_history.py  test_universe.py
