[project]
name = "stock-hunter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115,<1", "httpx>=0.28,<1", "pydantic-settings>=2.7,<3", "redis>=5.2,<6", "sqlalchemy[asyncio]>=2.0,<3", "asyncpg>=0.30,<1", "uvicorn[standard]>=0.34,<1", "websockets>=13,<17"]

[project.optional-dependencies]
dev = ["aiosqlite>=0.20,<1", "pytest>=8.3,<9", "pytest-asyncio>=0.25,<1", "ruff>=0.9,<1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_hunter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
